--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "watchdog>=3.0.0",
     "rich>=13.0.0",
     "claude-agent-sdk>=0.1.0",
+    "aiohttp>=3.9.0",
     "pyzmq>=25.0.0",
     "msgpack>=1.0.0",
     "psutil>=5.9.0",
