--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reter_code"
-version = "0.1.7"
+version = "0.1.8"
 description = "Reter Code - AI-powered code reasoning MCP server"
 readme = "README.md"
 license = {text = "MIT"}
@@ -35,6 +35,7 @@ dependencies = [
     "transformers<4.48",
     "faiss-cpu>=1.7.0",
     "anthropic>=0.30.0",
+    "claude-agent-sdk>=0.1.20",
     "watchdog>=3.0.0",
     "rich>=13.0.0",
     "aiohttp>=3.9.0",
